--- a/HTML/ejercicio3.html
+++ b/HTML/ejercicio3.html
@@ -19,12 +19,12 @@
         <td>Madrid</td>
       </tr>
       <tr>
-        <td>China</td>
-        <td>Pekín</td>
+        <td>Cuba</td>
+        <td>Habana</td>
       </tr>
       <tr>
-        <td>Angola</td>
-        <td>Luanda</td>
+        <td>Venezuela</td>
+        <td>Caracas</td>
       </tr>
     </table>
     <a href="https://www.infolaso.com/paises-y-capitales-del-mundo-por-continentes.html" target="_blank">Más países y capitales</a>
