--- a/HTML/ejercicio4.html
+++ b/HTML/ejercicio4.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Ejercicio 4</title>
   </head>
   <body>
-    <h1> Aspecto de HTML</h1>
+    <h1>Aspecto de HTML</h1>
     <p><strong>Esto es una negrita</strong></p>
     <p><i>Esto en cursiva</i></p>
     <p><u>Esto subrayado</u></p>
