--- a/JAvascript/ejerciciojs.html
+++ b/JAvascript/ejerciciojs.html
@@ -10,5 +10,10 @@
     <script src="ejercicio1.js"></script>
     <script src="ejercicio2.js"></script>
     <script src="ejercicio3.js"></script>
+    <script src="ejercicio4.js"></script>
+    <script src="ejercicio5.js"></script>
+    <script src="ejercicio6.js"></script>
+    
+
 </body>
 </html>
