--- a/JAvascript/ejercicio16.html
+++ b/JAvascript/ejercicio16.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="ejercicio1.js"></script>
-    <script src="ejercicio2.js"></script>
-    <script src="ejercicio3.js"></script>
-    <script src="ejercicio4.js"></script>
-    <script src="ejercicio5.js"></script>
-    <script src="ejercicio6.js"></script>
+    <h1>¿Tú número es par o impar?</h1>
+    <input id="num" type="number" placeholder="Número"></input>
+    <button id= "btn">Comprobar</button>
+
+
+    <script src="ejercicio16.js"></script>
     
 </body>
 </html>
